# AreaHustle

./: .gitignore  DEMO_STRATEGY.md  GEMINI.md  HANDOFF.md  INDEX.md  PROJECT_SHOWCASE.md  PROJECT_SUBMISSION.md  README.md  RISK_MITIGATION.md  TECHNICAL_PRD.md
backend/: .env.example  AreaHustle_API_Postman_Collection.json  README.md  database.py  list_gemini_models.py  main.py  models.py  pyproject.toml  requirements.txt  seed_demo.py  setup_aethex.py  test_aethex_connection.py  test_all.py  test_backend.py  test_gemini_extraction.py  test_voice_to_intent_pipeline.py
backend/agents/: __init__.py  fix_tool_url.py  hustler_notifier.py  setup_notifier_agent.py  setup_twilio.py  test_call.py  watch_call.py
backend/routes/: __init__.py  auth.py  loans.py  passport.py  tasks.py  transactions.py  users.py
backend/static/: test_voice.html
backend/tests/: README.md  test_aethex_connection.py  test_all.py  test_backend.py
docs/: PRD_V2.md  RISK_MITIGATION.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/components/: AnimatedNumber.tsx  AuthModal.tsx  CreateJob.tsx  Footer.tsx  JobFeed.tsx  JobSlideOver.tsx  Navbar.tsx  PageLoader.tsx  Register.tsx  VoiceTerminal.tsx
frontend/src/components/pitch/: SlideAsk.tsx  SlideHook.tsx  (+12 more)
frontend/src/lib/: api.ts  auth-context.tsx  format.ts
frontend/src/routes/: __root.tsx  customer-dashboard.tsx  index.tsx  jobs.tsx  onboarding.tsx  passport.tsx  pitch.tsx  post-task.tsx  profile.tsx
prd_v2/: PRD_V2.md  SPRINT_PLAN.md
