[project]
name = "backend"
version = "0.1.0"
description = "AreaHustle API — hyper-local gig marketplace and behavioral credit engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "uvicorn>=0.48.0",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.32",
]
